[tool.poetry]
name = "awan-llm-api"
version = "0.0.2"
description = "A Python wrapper for the AwanLLM API to easily generate text and chat completions."
authors = ["Yohan Sambin"]
readme = "README.md"
repository = "https://github.com/DewasSquid/awan-llm-api"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
